Fixing Advanced Routing