@@ -145,14 +145,17 @@
 		</java>
 	</target>
 
-    <target name="debug" depends="jars">
+	<target name="debug" depends="jars">
 		<java jar="build/vsalem.jar"
-				dir="build"
-				fork="true"
-				maxmemory="256m"
-				classpath="java">
-			<arg line="-d -U http://game.salemthegame.com/res/ game.salemthegame.com"/>
-                        <jvmarg line="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -XX:-UseGCOverheadLimit" />
+			  dir="build"
+			  fork="true"
+			  classpath="java">
+			<arg line="-U http://game.salemthegame.com/res/ game.salemthegame.com"/>
+			<jvmarg line="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -Djogl.disable.opengles=true
+						-Xms2g -Xmx2g -XX:MaxDirectMemorySize=2048m
+						-XX:NewSize=1g -XX:MaxNewSize=1g -XX:MaxTenuringThreshold=2 -XX:SurvivorRatio=8 -XX:+UnlockDiagnosticVMOptions
+						-XX:+ParallelRefProcEnabled
+						-XX:+AlwaysPreTouch -XX:-OmitStackTraceInFastThrow" />
 		</java>
 	</target>
 
